--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-# jupyter==1.1.1
+aio-pika==9.5.5
 mypy==1.15.0
 nb-black-formatter==1.0.1
 numpy==2.2.4
 pandas==2.2.3
 polars==1.26.0
+# jupyter==1.1.1
 pyarrow==19.0.1
 pydantic-settings==2.8.1
 ruff==0.11.4
