--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ ignore_missing_imports = true
 # Set the maximum line length to 100.
 line-length = 100
 indent-width = 4
+# Use the latest rules.
+preview = true
 
 # Assume Python 3.10
 target-version = "py312"
@@ -60,3 +62,6 @@ skip-magic-trailing-comma = false
 
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
