--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,22 @@ authors = [{ name = "Neidu", email = "your.email@example.com" }]
 dependencies = [
     "aio-pika==9.5.5",
     "mypy==1.15.0",
-    "nb-black-formatter==1.0.1",
     "numpy==2.2.4",
+    "omegaconf>=2.3.0",
     "pandas==2.2.3",
     "polars==1.26.0",
     "pyarrow==19.0.1",
     "pydantic-settings==2.8.1",
     "scikit-learn==1.6.1",
     "tqdm==4.67.1",
+]
+
+[dependency-groups]
+dev = [
+    "jupyter==1.1.1",
+    "nb-black-formatter==1.0.1",
+    "pre-commit>=4.2.0",
+    "ruff==0.11.4",
 ]
 
 [tool.mypy]
@@ -119,12 +127,7 @@ skip-magic-trailing-comma = false
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
 
-[dependency-groups]
-dev = [
-    "jupyter==1.1.1",
-    "pre-commit>=4.2.0",
-    "ruff==0.11.4",
-]
+
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"] # Allow unused imports in __init__.py
