--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - rabbitmq-data:/var/lib/rabbitmq
 
   worker: # 2nd service
-    image: rmq-worker:v1
+    image: chineidu/rmq-worker:v1
     build:
       context: ./
       dockerfile: Dockerfile.worker
@@ -25,7 +25,7 @@ services:
     volumes:
       - ./db:/app/db  # Bind mount for the data folder
     deploy:
-      replicas: 1  # Number of replicas
+      replicas: 3  # Number of replicas
     develop:
     # Create a `watch` configuration to update the app
       watch:
@@ -42,7 +42,7 @@ services:
       - local-rabbitmq
 
   producer: # 3rd service
-    image: rmq-producer:v1
+    image: chineidu/rmq-producer:v1
     build:
       context: ./
       dockerfile: Dockerfile.producer
