--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = "==3.12.*"
 authors = [{ name = "Neidu", email = "your.email@example.com" }]
 dependencies = [
     "aio-pika==9.5.5",
+    "aiosqlite>=0.21.0",
     "mypy==1.15.0",
     "numpy==2.2.4",
     "omegaconf>=2.3.0",
