--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     volumes:
       - ./db:/app/db  # Bind mount for the data folder
     deploy:
-      replicas: 2  # Number of replicas
+      replicas: 3  # Number of replicas
     # CPU limits (0.5 = 50% of one core)
     cpus: "0.5"
     develop:
@@ -43,6 +43,7 @@ services:
           # Folders and files to ignore
           ignore:
             - .venv
+            - "**/**/*.ipynb"
         # Rebuild image if any of these files change
         - action: rebuild
           path: ./pyproject.toml
@@ -72,6 +73,7 @@ services:
           # Folders and files to ignore
           ignore:
             - .venv
+            - "**/**/*.ipynb"
         # Rebuild image if any of these files change
         - action: rebuild
           path: ./pyproject.toml
