--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "polars==1.26.0",
     "pyarrow==19.0.1",
     "pydantic-settings==2.8.1",
+    "requests>=2.32.3",
     "scikit-learn==1.6.1",
     "tqdm==4.67.1",
 ]
