--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,6 +5,8 @@ app_config:
       is_remote: true
       remote_data_id: 1lSKBgYQ6bgV4ARRpeRfPMpLgf1GgyWY8
       download_path: data/downloaded_data.parquet
+      batch_mode: false
+      batch_size: 10
     num_vars:
       - age
       - pclass
@@ -17,7 +19,8 @@ app_config:
       - embarked
 
   db:
-    database: db/results.db
+    db_path: db/results.db
+    max_connections: 5
 
   model:
     hyperparams:
