--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,7 +5,7 @@ app_config:
       is_remote: true
       remote_data_id: 1lSKBgYQ6bgV4ARRpeRfPMpLgf1GgyWY8
       download_path: data/downloaded_data.parquet
-      batch_mode: false
+      batch_mode: true
       batch_size: 10
     num_vars:
       - age
