--- a/rmq-app/templates/producer-deployment.yaml
+++ b/rmq-app/templates/producer-deployment.yaml
@@ -12,9 +12,14 @@ spec:
       labels:
         app: {{ .Release.Name }}-producer
     spec:
+      initContainers:
+        - name: wait-for-rabbitmq
+          image: busybox:1.28
+          command: ['sh', '-c', 'until nc -z {{ .Release.Name }}-rabbitmq 5672; do echo waiting for rabbitmq; sleep 2; done;']
       containers:
       - name: producer
         image: {{ .Values.producer.image }}
+        imagePullPolicy: {{ .Values.producer.imagePullPolicy }}
         resources:
           limits:
             cpu: {{ .Values.producer.resources.limits.cpu }}
