--- a/rmq-app/my_deployments/producer-deployment.yaml
+++ b/rmq-app/my_deployments/producer-deployment.yaml
@@ -31,11 +31,11 @@ spec:
         - name: RABBITMQ_HOST
           value: {{ .Release.Name }}-rabbitmq
         envFrom:
-        - configMapRef:
+        - configMapRef:  # Load environment variables from the ConfigMap
             name: {{ .Release.Name }}-config
         volumeMounts:
         - name: data-volume
           mountPath: /app/data
-      # volumes:
-      # - name: data-volume
-      #   emptyDir: {}  # For dev purposes; use PVC for production
+      volumes:
+      - name: data-volume
+        emptyDir: {}  # For dev purposes; use PVC for production
