--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pyarrow==19.0.1",
     "pydantic-settings==2.8.1",
     "requests>=2.32.3",
+    "ruff>=0.11.4",
     "scikit-learn==1.6.1",
     "tqdm==4.67.1",
 ]
