feat: Add Github workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,11 @@ name: Test CI
 
 on:
     push:
-        branches-ignore: [ main ]
+        # branches-ignore: [ main ]
+        branches: [ main ]
+
     pull_request:
-        branches-ignore: [ main ]
+        branches: [ main ]
 
 jobs:
     build:
