--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           - name: Restore uv cache
             uses: actions/cache@v4
             with:
-                path: ${UV_CACHE_DIR}
+                path: ${{ env.UV_CACHE_DIR }}
                 key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
                 restore-keys: |
                     uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
