--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
 [project]
 name = "batch-process"
-version = "0.1.0"
+version = "0.1.5"
 description = "This is used to batch process data"
 requires-python = "==3.12.*"
 authors = [{ name = "Neidu", email = "your.email@example.com" }]
 dependencies = [
     "aio-pika==9.5.5",
     "aiosqlite>=0.21.0",
+    "alembic>=1.16.2",
     "anyio>=4.9.0",
+    "celery[redis]>=5.5.3",
+    "multidict>=6.5.0",
     "mypy==1.15.0",
     "numpy==2.2.4",
     "omegaconf>=2.3.0",
@@ -19,6 +22,7 @@ dependencies = [
     "rich>=14.0.0",
     "ruff>=0.11.4",
     "scikit-learn==1.6.1",
+    "sqlalchemy>=2.0.41",
     "tqdm==4.67.1",
 ]
 
