chore: Add main entry point and worker script

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ RABBITMQ_DIRECT_EXCHANGE=your-direct-exchange
 POSTGRES_USER=your-username
 POSTGRES_PASSWORD=your-password
 POSTGRES_DB=your-database
+POSTGRES_PORT=5432
