--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,14 @@ dependencies = [
     "alembic>=1.16.2",
     "anyio>=4.9.0",
     "celery[redis]>=5.5.3",
+    "flower>=2.0.1",
     "multidict>=6.5.0",
     "mypy==1.15.0",
     "numpy==2.2.4",
     "omegaconf>=2.3.0",
     "pandas==2.2.3",
     "polars==1.26.0",
+    "psycopg2-binary>=2.9.10",
     "pyarrow==19.0.1",
     "pydantic-settings==2.8.1",
     "requests>=2.32.3",
