--- a/config/config.yaml
+++ b/config/config.yaml
@@ -36,12 +36,13 @@ app_config:
 
   celery_config:
     broker_url: pyamqp://guest@localhost:5672// # Add this to your .env
-    result_backend: redis://localhost:6379
+    result_backend: db+postgresql://postgres:postgres@localhost:5433/postgres # Add this to your .env
     task_config:
       task_serializer: json
       result_serializer: json
       timezone: UTC
       enable_utc: true
+    # Task routing and queues
     task_routes:
       src.celery.tasks.email_tasks.*: { queue: email }
       src.celery.tasks.data_processing.*: { queue: data }
@@ -65,3 +66,6 @@ app_config:
       result_expires: 3600
       task_compression: gzip
       result_compression: gzip
+      result_backend_always_retry: true
+      result_persistent: true
+      result_backend_max_retries: 3
