--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "rich>=14.0.0",
     "ruff>=0.11.4",
     "scikit-learn==1.6.1",
+    "spacy>=3.8.7",
     "sqlalchemy>=2.0.41",
     "tqdm==4.67.1",
 ]
