Add .env example file

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
-# RABBITMQ
-RABBITMQ_HOST=local-rabbitmq
+# Update this file with your own environment variables
+# ======= RabbitMQ =======
+RABBITMQ_HOST=localhost
 RABBITMQ_PORT=5672
-RABBITMQ_DEFAULT_USER=your-username
-RABBITMQ_DEFAULT_PASS=your-password
-RABBITMQ_EXPIRATION_MS=3600000
+RABBITMQ_DEFAULT_USER=guest
+RABBITMQ_DEFAULT_PASS=guest
+RABBITMQ_EXPIRATION_MS=3600000  # 60 minutes
 RABBITMQ_HEARTBEAT=600
-RABBITMQ_DIRECT_EXCHANGE=your-direct-exchange
+RABBITMQ_DIRECT_EXCHANGE=person_exchange
 
-# POSTGRES
-POSTGRES_USER=your-username
-POSTGRES_PASSWORD=your-password
-POSTGRES_DB=your-database
-POSTGRES_PORT=5432
+# ======= DB =======
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=postgres
+POSTGRES_PORT=5433
