--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 # Update this file with your own environment variables
+# ======= Environment =======
+ENVIRONMENT=dev  # dev, prod, test
+
 # ======= RabbitMQ =======
 RABBITMQ_HOST=localhost
 RABBITMQ_PORT=5672
