chore: Updated the email sending logic

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 POSTGRES_PORT=5433
+
+# ======= Celery =======
+CELERY_FLOWER_USER=admin
+CELERY_FLOWER_PASSWORD=password
