--- a/config/config.yaml
+++ b/config/config.yaml
@@ -57,7 +57,7 @@ app_config:
       beat_schedule:
         cleanup_old_records:
           task: src.celery.tasks.periodic_tasks.cleanup_old_records
-          schedule: 3600
+          schedule: 3600 # 1 hour
       health_check:
         task: src.celery.tasks.periodic_tasks.health_check
         schedule: 180 # 3 minutes
