--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dev = [
     "jupyter==1.1.1",
     "nb-black-formatter==1.0.1",
     "pre-commit>=4.2.0",
+    "pytest>=8.4.1",
     "ruff==0.11.4",
 ]
 
@@ -141,3 +142,8 @@ line-ending = "auto"
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"] # Allow unused imports in __init__.py
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "src"
+]
