feat: Deployed celery, beat and flower

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,11 @@ RABBITMQ_DIRECT_EXCHANGE=person_exchange
 # ======= DB =======
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=postgres
-POSTGRES_PORT=5433
+# Use the "serviceName" if running another container in docker 
+# compose else use "localhost"
+POSTGRES_HOST=database
+POSTGRES_PORT=5432
+POSTGRES_DB=celery_db
 
 # ======= Celery =======
 CELERY_FLOWER_USER=admin
