--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "alembic>=1.16.2",
     "anyio>=4.9.0",
     "celery[redis]>=5.5.3",
+    "fastapi>=0.116.1",
     "flower>=2.0.1",
     "multidict>=6.5.0",
     "mypy==1.15.0",
@@ -27,6 +28,7 @@ dependencies = [
     "spacy>=3.8.7",
     "sqlalchemy>=2.0.41",
     "tqdm==4.67.1",
+    "uvicorn>=0.35.0",
 ]
 
 [dependency-groups]
