feat: Scaled up prediction-worker

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,4 @@ POSTGRES_DB=celery_db
 # ======= Celery =======
 CELERY_FLOWER_USER=admin
 CELERY_FLOWER_PASSWORD=password
+CELERY_WORKER_TYPE=light  # light or heavy
