--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,16 @@
 [project]
-name = "batch-process"
-version = "0.1.5"
+name = "batch-processing"
+version = "0.2.5"
 description = "This is used to batch process data"
 requires-python = "==3.12.*"
 authors = [{ name = "Neidu", email = "your.email@example.com" }]
 dependencies = [
-    "aio-pika==9.5.5",
-    "aiosqlite>=0.21.0",
     "alembic>=1.16.2",
     "anyio>=4.9.0",
     "celery[redis]>=5.5.3",
     "fastapi>=0.116.1",
     "flower>=2.0.1",
+    "httpx>=0.28.1",
     "multidict>=6.5.0",
     "mypy==1.15.0",
     "numpy==2.2.4",
@@ -25,7 +24,6 @@ dependencies = [
     "rich>=14.0.0",
     "ruff>=0.11.4",
     "scikit-learn==1.6.1",
-    "spacy>=3.8.7",
     "sqlalchemy>=2.0.41",
     "tqdm==4.67.1",
     "uvicorn>=0.35.0",
